--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="pimary-navigation-list">
           <li><a class="pimary-navigation-item" href="#">Studio</a></li>
           <li>
-            <a class="pimary-navigation-item" href="/portfolio.html"
+            <a class="pimary-navigation-item" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
