--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Header-->
     <header class="header">
       <!--logo-->
-      <a href="/index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <!--Navigation-->
       <nav>
         <ul class="pimary-navigation-list">
@@ -125,7 +125,7 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a href="#" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
