--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <!--logo-->
-      <a href="/index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <!--Navigation-->
       <nav>
         <ul class="pimary-navigation-list">
@@ -147,7 +147,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="#" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
