--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,7 +17,7 @@
     <!--Header-->
     <header class="header">
       <!--logo-->
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
       <!--Navigation-->
       <nav>
         <ul class="pimary-navigation-list">
@@ -52,29 +51,29 @@
       <section>
         <ul class="what-are-we-doing-list">
           <li class="what-are-we-doing-item">
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="what-are-we-doing-heading">Strategy</h3>
+            <p class="what-are-we-doing-content">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="what-are-we-doing-item">
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="what-are-we-doing-heading">Punctuality</h3>
+            <p class="what-are-we-doing-content">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="what-are-we-doing-item">
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="what-are-we-doing-heading">Diligence</h3>
+            <p class="what-are-we-doing-content">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="what-are-we-doing-item">
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="what-are-we-doing-heading">Technologies</h3>
+            <p class="what-are-we-doing-content">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -83,7 +82,7 @@
       </section>
       <!--What are we doing-->
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="what-are-we-doing-img-heading">What are we doing</h2>
         <ul class="work-list">
           <li class="work-item">
             <img src="img/img1.jpg" alt="iMac" />
@@ -98,35 +97,35 @@
       </section>
       <!--Team-->
       <section class="team">
-        <h2>Our Team</h2>
+        <h2 class="our-team-heading">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
             <img src="img/person_plate_1.jpg" width="264" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="person-name-heading">Mark Guerrero</h3>
+            <p class="person-description">Product Designer</p>
           </li>
           <li class="team-item">
             <img src="img/person_plate_2.jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="person-name-heading">Tom Ford</h3>
+            <p class="person-description">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img src="img/person_plate_3.jpg" width="264" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="person-name-heading">Camila Garcia</h3>
+            <p class="person-description">Marketing</p>
           </li>
           <li class="team-item">
             <img src="img/person_plate_4.jpg" width="264" alt="Mark Guerrero" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="person-heading">Daniel Wilson</h3>
+            <p class="person-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-      <p>
+      <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
+      <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
