--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Halahan Kirill HW2[portfolio]</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Halahan Kirill HW2[portfolio.html]</title>
   </head>
   <body>
     <header class="header">
       <!--logo-->
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
       <!--Navigation-->
       <nav>
         <ul class="pimary-navigation-list">
           <li><a class="pimary-navigation-item" href="#">Studio</a></li>
           <li>
-            <a class="pimary-navigation-item" href="/portfolio.html"
+            <a class="pimary-navigation-item" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
@@ -48,8 +54,12 @@
       <section>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <img src="./img/banking_app.jpg" alt="Banking App" />
-            <h3>Banking App Interface Concept</h3>
+            <img
+              class="catalog-image"
+              src="./img/banking_app.jpg"
+              alt="Banking App"
+            />
+            <h3 class="catalog-heading">Banking App Interface Concept</h3>
             <p>App</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -58,28 +68,12 @@
             </p>
           </li>
           <li class="catalog-item">
-            <img src="./img/cashless_payment.jpg" alt="Project" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li class="catalog-item">
-            <img src="./img/meditation_app.jpg" alt="Meditaion App" />
-            <h3>Meditaion App</h3>
-            <p>App</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </li>
-          <li class="catalog-item">
-            <img src="./img/taxi_service.jpg" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
+            <img
+              class="catalog-image"
+              src="./img/cashless_payment.jpg"
+              alt="Project"
+            />
+            <h3 class="catalog-heading">Cashless Payment</h3>
             <p>Marketing</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -89,10 +83,39 @@
           </li>
           <li class="catalog-item">
             <img
+              class="catalog-image"
+              src="./img/meditation_app.jpg"
+              alt="Meditaion App"
+            />
+            <h3 class="catalog-heading">Meditaion App</h3>
+            <p>App</p>
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager
+              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+              Storage App
+            </p>
+          </li>
+          <li class="catalog-item">
+            <img
+              class="catalog-image"
+              src="./img/taxi_service.jpg"
+              alt="Taxi Service"
+            />
+            <h3 class="catalog-heading">Taxi Service</h3>
+            <p>Marketing</p>
+            <p>
+              14 Stylish and User-Friendly App Design Concepts · Task Manager
+              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+              Storage App
+            </p>
+          </li>
+          <li class="catalog-item">
+            <img
+              class="catalog-image"
               src="./img/screen_illustration.jpg"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
+            <h3 class="catalog-heading">Screen Illustrations</h3>
             <p>Design</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -101,8 +124,12 @@
             </p>
           </li>
           <li class="catalog-item">
-            <img src="./img/online_cources.jpg" alt="Online Courses" />
-            <h3>Online Courses</h3>
+            <img
+              class="catalog-image"
+              src="./img/online_cources.jpg"
+              alt="Online Courses"
+            />
+            <h3 class="catalog-heading">Online Courses</h3>
             <p>Marketing</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -112,10 +139,11 @@
           </li>
           <li class="catalog-item">
             <img
+              class="catalog-image"
               src="./img/instagram_stories.jpg"
               alt="Instagram Stories Concept"
             />
-            <h3>Instagram Stories Concept</h3>
+            <h3 class="catalog-heading">Instagram Stories Concept</h3>
             <p>Design</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -124,8 +152,12 @@
             </p>
           </li>
           <li class="catalog-item">
-            <img src="./img/organic_food.jpg" alt="Organic Food" />
-            <h3>Organic Food</h3>
+            <img
+              class="catalog-image"
+              src="./img/organic_food.jpg"
+              alt="Organic Food"
+            />
+            <h3 class="catalog-heading">Organic Food</h3>
             <p>Web Site</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -134,8 +166,12 @@
             </p>
           </li>
           <li class="catalog-item">
-            <img src="./img/coffe.jpg" alt="Fresh Coffee" />
-            <h3>Fresh Coffee</h3>
+            <img
+              class="catalog-image"
+              src="./img/coffe.jpg"
+              alt="Fresh Coffee"
+            />
+            <h3 class="catalog-heading">Fresh Coffee</h3>
             <p>Web Site</p>
             <p>
               14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -147,7 +183,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>WEB</span>STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
